# Projekt-Rada

./: .gitignore  BUILD.bazel  Procfile  README.md  WORKSPACE  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
bsign/: BUILD.bazel  bsign.go
client/: BUILD.bazel  envoy.yaml  index.dev.html  index.prod.html  main.dev.ts  main.go  main.prod.ts  rollup.config.js  styles.css
client/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  host.ts  proto_parsing.ts
client/app/pollinit/: pollinit.component.html  pollinit.component.ts
client/app/product-list/: product-list.component.html  product-list.component.ts
client/app/query/: BUILD.bazel  query_pb.d.ts  query_pb.js  query_pb_service.d.ts  query_pb_service.js
client/app/results/: results.component.html  results.component.ts
client/app/top-bar/: top-bar.component.html  top-bar.component.ts
client/app/vote/: vote.component.html  vote.component.ts
e2e/src/: app.e2e-spec.ts
hello/: BUILD.bazel  hello.proto
logic/: BUILD.bazel  db.go  logic.go
query/: BUILD.bazel  query.proto  query_utils.go
rules/: angular_ts_library.bzl
server/: BUILD.bazel  cert.pem  key.pem  main.go  server_test.go  server_test_data.go
src/: BUILD.bazel  index.html
src/app/: BUILD.bazel  app.component.spec.ts  app.component.ts
src/environments/: BUILD.bazel
store/: BUILD.bazel  store.go  store_test.go  store_test_data.go
