load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library", "typescript_grpc_web_library")

package(default_visibility = ["//:__subpackages__"])

go_library(
    name = "go_default_library",
    srcs = ["query_utils.go"],
    embed = [":query_go_proto"],
    importpath = "github.com/ememak/Projekt-Rada/query",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "query_proto",
    srcs = ["query.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "query_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/ememak/Projekt-Rada/query",
    proto = ":query_proto",
    visibility = ["//visibility:public"],
)

typescript_proto_library(
    name = "query_ts_proto",
    proto = ":query_proto",
)

typescript_grpc_web_library(
    name = "query_ts_grpc_web",
    proto = ":query_proto",
)
