load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server_test_data.go",
    ],
    importpath = "github.com/ememak/Projekt-Rada/server",
    visibility = ["//visibility:private"],
    deps = [
        "//bsign:go_default_library",
        "//query:go_default_library",
        "//store:go_default_library",
        "@com_github_improbable-eng_grpc-web//go/grpcweb:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)

go_binary(
    name = "server",
    data = ["//client:prodapp"],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "devserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//store:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
