load("@npm//@bazel/typescript:index.bzl", "ts_devserver", "ts_library")

ts_library(
    name = "src",
    srcs = [
        "main.ts",
        "polyfills.ts"
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/app",
        "//src/environments",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@angular/router",
        "@npm//@angular/compiler-cli",
        "@npm//@types",
    ],
    use_angular_plugin = True,
)

ts_devserver(
    name="client",
    entry_module="main.ts",
    deps = ["//src"],
    static_files=[
        "index.html",
        "styles.css",
    ],
)
