load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//rules:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "app",
    srcs = glob(include=[
        "**/*.module.ts",
        "**/*.component.ts",
    ]),
    angular_assets = glob(
        include = [
            "**/*.html",
            "**/*.css",
        ]
    ),
    tsconfig = "//:tsconfig.json",
    deps = [
        ":products",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@improbable-eng/grpc-web",
        "@npm//google-protobuf",
        "//client/app/query:query_pb",
        "//client/app/query:query_pb_service",
    ],
)

ts_library(
    name = "products",
    srcs = ["products.ts"],
    tsconfig = "//:tsconfig.json",
)
