load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//rules:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "app",
    srcs = glob(include = [
        "**/*.module.ts",
        "**/*.component.ts",
    ]),
    angular_assets = glob(
        include = [
            "**/*.html",
            "**/*.css",
        ],
    ),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//query:query_ts_proto",
        "//query:query_ts_grpc_web",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/material",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//angular-google-charts",
        "@npm//@improbable-eng/grpc-web",
        "@npm//google-protobuf",
    ],
)
