load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//rules:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "app",
    srcs = glob(include = [
        "**/*.module.ts",
        "**/*.component.ts",
    ]),
    angular_assets = glob(
        include = [
            "**/*.html",
            "**/*.css",
        ],
    ),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//query:query_ts_proto",
        "//query:query_ts_grpc_web",
        ":host",
        ":proto_parsing",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/material",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@improbable-eng/grpc-web",
        "@npm//angular-google-charts",
        "@npm//big-integer",
        "@npm//google-protobuf",
        "@npm//@types/node-forge",
        "@npm//node-forge",
        "@npm//tslib",
    ],
)

ts_library(
    name = "host",
    srcs = ["host.ts"],
    tsconfig = "//:tsconfig.json",
)

ts_library(
    name = "proto_parsing",
    srcs = ["proto_parsing.ts"],
    deps = ["//query:query_ts_proto"],
    tsconfig = "//:tsconfig.json",
)
