load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.component.spec.ts",
        "app.module.ts",
    ],
    angular_assets = [
        "app.component.html",
        "app.component.css",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/compiler-cli",
        "@npm//@types",
    ],
    visibility = ["//visibility:public"],
    use_angular_plugin = True,
)