load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "environments",
    srcs = glob(
        include = ["*.ts"],
    ),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/compiler-cli",
        "@npm//@types",
    ],
    visibility = ["//visibility:public"],
    use_angular_plugin = True,
)